fixed tests after refactor